--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,41 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <h1>Hello World</h1>
+    <pre>
+
+    <code class="line-numbers language-python">
+
+    if name == "ted"
+      print("hey ted")
+    else:
+       print("not ted")
+    </code>
+
+    </pre>
+
+    <br><br>
+    <form method="post" action="{% url 'home' %}">
+        {% csrf_token %}
+
+
+                 <div class="form-group">
+            <label for="exampleFormControlTextarea1">Paste Your Code</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1"  name="code" rows="3"></textarea>
+          </div>
+
+
+          <div class="form-group">
+    <label for="exampleFormControlSelect1">Select Language</label>
+    <select class="form-control" id="exampleFormControlSelect1">
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+      <option>5</option>
+    </select>
+  </div>
+        <br><br>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 
 {% endblock %}
