suggest html code and python logic

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,6 +12,15 @@
           <a class="nav-link" href="#">Create Account</a>
         </li>
 
+           <li class="nav-item">
+          <a class="nav-link" href="{% url 'suggest' %}">Suggest</a>
+        </li>
+
+
+              <li class="nav-item">
+          <a class="nav-link" href="{% url 'home' %}">Fix Code</a>
+        </li>
+
 
 
 
