--- a/templates/suggest.html
+++ b/templates/suggest.html
@@ -1,10 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
 
-</body>
-</html>
+
+    {% if response %}
+    <pre>
+    <code class="line-numbers language-python">
+
+     {{ response }}
+
+    </code>
+    </pre>
+
+    {% endif %}
+
+    <br><br>
+    <form method="post" action="{% url 'home' %}">
+        {% csrf_token %}
+
+
+                 <div class="form-group">
+            <label for="exampleFormControlTextarea1">Paste Your Code</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1"  placeholder="Ai Suggest code" name="code" rows="3"></textarea>
+          </div>
+
+
+          <div class="form-group">
+    <label for="exampleFormControlSelect1">Select Programming Language</label>
+    <select class="form-control" id="exampleFormControlSelect1" name="lang">
+
+        {% for lang in lang_list %}
+
+              <option value="{{ lang }}">{{ lang }}</option>
+
+        {% endfor %}
+
+
+
+    </select>
+  </div>
+        <br><br>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+
+{% endblock %}
