--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -21,7 +21,23 @@
           <a class="nav-link" href="{% url 'home' %}">Fix Code</a>
         </li>
 
+    {% if user.is_authenticated %}
+       <li class="nav-item">
+          <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+        </li>
 
+        {% else %}
+
+              <li class="nav-item">
+          <a class="nav-link" href="{% url 'register' %}">Register</a>
+        </li>
+
+                <li class="nav-item">
+          <a class="nav-link" href="{% url 'home' %}">Login</a>
+        </li>
+
+    
+    {% endif %} 
 
 
       </ul>
