getting records belonging to a specific user and displaying them

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -26,6 +26,10 @@
           <a class="nav-link" href="{% url 'logout' %}">Logout</a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'pastquest' %}">Past Code</a>
+        </li>
+
         {% else %}
 
               <li class="nav-item">
