delete past code logic

--- a/templates/pastquest.html
+++ b/templates/pastquest.html
@@ -1,10 +1,29 @@
-
 {% extends 'base.html' %}
-
 {% block content %}
 
+{% if user_code %}
+	{% for item in user_code %}
 
-    <h1>Previous Past Code</h1>
+{{ item.question }}<br/>
+
+<pre>
+<code class='line-numbers language-{{ item.language }}'>
+{{ item.code_answer }}
+
+</code>
+</pre>
+<a href="{% url 'delete_past' item.id %}" class='btn btn-outline-secondary btn-sm'>Delete This</a>
+
+
+<br/><br/><br/><br/>
+
+
+
+	{% endfor %}
+
+{% endif %}
+
+
 
 
 {% endblock %}
